updated makegame endpoint for posting data insted of taking out of url